sna: Replace assert with conditional setting of sna_pixmap->mapped

The status of sna_pixmap->mapped was changed with the introduction of
mmap(wc), but the code was still asserting that the mmap could only be
cached.

References: https://bugs.freedesktop.org/show_bug.cgi?id=88112#c20
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>